test_files/s_cproc/include/test_009/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/include/test_009/i.input:1:11: error: x/*y: No such file or directory
 #include <x/*y>
           ^
